# vanity-ssh-rs

./: Cargo.toml  README.md
.github/workflows/: publish.yml
benches/: key_generation.rs  key_generation_sweep.rs
scripts/: check_keypair_valid.sh
src/: lib.rs
src/core/: file_io.rs  keypair.rs  pattern.rs
src/manager/: manager.rs
src/worker/: generator.rs  thread.rs
